# dl-training-template

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/callbacks/: default.yaml
configs/data/: modular.yaml
configs/example/callbacks/: default.yaml
configs/example/data/: dummy.yaml  modular.yaml
configs/example/model/: causal_lm.yaml  simple.yaml
configs/logger/: wandb.yaml
configs/model/: causal_lm.yaml
configs/trainer/: ddp.yaml  gpu_1.yaml  mps.yaml
lightning_logs/version_0/: hparams.yaml  metrics.csv
notebooks/examples/: modular_interp.ipynb
scripts/: setup_vm.sh  smoke_local.sh  train_ddp.sh  train_gpu.sh
src/example/interp/: __init__.py  ablate.py  patch.py  viz.py
src/example/models/: __init__.py  examples.py
src/example/train/: __init__.py  run.py
src/example/train/callbacks/: __init__.py
src/example/utils/: __init__.py  helpers.py
src/project/: lit_causal_lm.py
src/project/data/: lit_data.py  modular.py
src/project/interp/: __init__.py  ablate.py  hooks.py  patch.py
src/project/lit_modules/: lit_causal_lm.py
src/project/models/: __init__.py  examples.py  simple.py
src/project/train/: callbacks.py  run.py
src/project/train/callbacks/: fourier.py
src/project/utils/: helpers.py
tests/: test_data_integrity.py
