[project]
name = "training-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "lightning>=2.4.0",
    "torch>=2.2",
    "transformer-lens>=2.17.0",
    "wandb",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26.4",
    "matplotlib>=3.8",
    "datasets>=4.5.0",
    "tensorboard>=2.19.0",
    "torchinfo>=1.8.0",
    "python-decouple>=3.8",
    "wonderwords>=3.0.1",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

analysis = [
    "jupyterlab>=4.5.3",
]
